Port timer to play ringing sound through custom alarmplayer, rather than knotification

BUG: 483824

We should bypass restrictions on notification sounds (from playing through KNotifications), since the timer arguably should always sound.

This also gives us the ability to change timer sounds in the future.