src/kclockd/timer.h
@@ -81,6 +81,7 @@ private Q_SLOTS:
     void reschedule();
 
 private:
+    QUrl findRingSoundLocation();
     void setRunning(bool running);
     void ring();
 
